# prato-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/states/: game-state.hpp  menu-state.hpp  pause-state.hpp  splash-state.hpp
src/: main.cpp
